# repowise

./: .gitignore  .mcp.json  Makefile  PROD_SPEC.md  README.md  pyproject.toml  repowise
.claude/: CLAUDE.md
docs/superpowers/specs/: 2026-04-22-central-app-db-design.md  2026-04-22-central-app-db-implementation-plan.md
src/repowise/: __init__.py  __main__.py  app_runtime.py  target_repo.py
src/repowise.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/repowise/cli/: cost_estimator.py  helpers.py  main.py  mcp_config.py  runtime.py  ui.py
src/repowise/cli/commands/: claude_md_cmd.py  costs_cmd.py  doctor_cmd.py  export_cmd.py  init_cmd.py  logs_cmd.py  mcp_cmd.py  reindex_cmd.py  restart_cmd.py  search_cmd.py  serve_cmd.py  start_cmd.py  status_cmd.py  stop_cmd.py  update_cmd.py
src/repowise/core/: hotspots.py  rate_limiter.py
src/repowise/core/generation/: cost_tracker.py  page_generator.py  report.py
src/repowise/core/generation/editor_files/: claude_md.py  tech_stack.py
src/repowise/core/generation/templates/: claude_md.j2
src/repowise/core/ingestion/: git_indexer.py  special_handlers.py
src/repowise/core/persistence/: __init__.py  crud.py  database.py  models.py  page_ids.py  search.py
src/repowise/core/pipeline/: orchestrator.py  persist.py  progress.py
src/repowise/core/providers/: __init__.py
src/repowise/core/providers/embedding/: __init__.py  base.py  gemini.py  openai.py  registry.py
src/repowise/core/providers/llm/: __init__.py  anthropic.py  base.py  gemini.py  litellm.py  mock.py  registry.py  xai.py
src/repowise/server/: app.py  job_executor.py  provider_config.py  scheduler.py  schemas.py
src/repowise/server/mcp_server/: _server.py  _state.py  tool_context.py  tool_search.py
src/repowise/server/routers/: chat.py  costs.py  git.py  health.py  logs.py  pages.py  repos.py  search.py
src/repowise/server/services/: knowledge_map.py
tests/: test_attention_signals.py  test_central_repo_persistence.py  test_cli.py  test_database_paths.py  test_git_hotspot_classification.py  test_mcp_config.py  test_runtime_target_contract.py  test_server_logs.py  test_target_repo.py  test_web_source.py
