[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repowise"
version = "0.2.1"
description = "Standalone source-of-truth repository for the Repowise application."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "tree-sitter>=0.23,<1",
    "tree-sitter-python>=0.23,<1",
    "tree-sitter-typescript>=0.23,<1",
    "tree-sitter-javascript>=0.23,<1",
    "tree-sitter-go>=0.23,<1",
    "tree-sitter-rust>=0.23,<1",
    "tree-sitter-java>=0.23,<1",
    "tree-sitter-cpp>=0.23,<1",
    "networkx>=3.3,<4",
    "scipy>=1.11,<2",
    "jinja2>=3.1,<4",
    "pathspec>=0.12,<1",
    "structlog>=24,<25",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.8,<3",
    "tenacity>=9,<10",
    "gitpython>=3.1,<4",
    "pyyaml>=6.0,<7",
    "lancedb>=0.12,<1",
    "click>=8.1,<9",
    "rich>=13,<14",
    "watchdog>=4,<5",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "mcp>=1.0,<2",
    "apscheduler>=3.10,<4",
    "cryptography>=43,<44",
    "anthropic>=0.40,<1",
    "openai>=1.50,<3",
    "google-genai>=1.0,<2",
    "litellm>=1.83.0,<2",
]

[project.optional-dependencies]
postgres = [
    "pgvector>=0.3,<1",
    "asyncpg>=0.29,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-snapshot>=0.9,<1",
    "respx>=0.21,<1",
    "time-machine>=2.14,<3",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-networkx>=3.3,<4",
    "build>=1.0",
]

[project.scripts]
repowise = "repowise.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["repowise*"]
namespaces = false

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = [
    "repowise.server.mcp_server.*",
    "repowise.core.analysis.*",
    "repowise.core.ingestion.change_detector",
    "repowise.core.ingestion.git_indexer",
    "repowise.core.ingestion.graph",
    "repowise.core.ingestion.parser",
    "repowise.core.ingestion.traverser",
    "repowise.core.persistence.crud",
    "repowise.core.persistence.vector_store",
    "repowise.core.providers.embedding.gemini",
    "repowise.core.providers.embedding.openai",
    "repowise.core.providers.llm.anthropic",
    "repowise.core.providers.llm.gemini",
    "repowise.core.generation.cost_tracker",
    "repowise.core.generation.page_generator",
    "repowise.core.pipeline.orchestrator",
    "repowise.cli.commands.init_cmd",
    "repowise.cli.commands.reindex_cmd",
    "repowise.server.services.knowledge_map",
    "repowise.server.routers.git",
    "repowise.server.routers.graph",
]
ignore_errors = true
